--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
   <link rel="stylesheet" href="assets/css/hero.css">
   <link rel="stylesheet" href="assets/css/animations.css">
   <link rel="stylesheet" href="assets/css/responsive.css">
+  <link rel="stylesheet" href="assets/css/premium.css">
 
   <script type="application/ld+json">
   {
