--- a/services/index.html
+++ b/services/index.html
@@ -49,6 +49,7 @@
   <link rel="stylesheet" href="../assets/css/hero.css">
   <link rel="stylesheet" href="../assets/css/animations.css">
   <link rel="stylesheet" href="../assets/css/responsive.css">
+  <link rel="stylesheet" href="../assets/css/premium.css">
 
   <!-- Schema.org Structured Data -->
   <script type="application/ld+json">
