--- a/privacy.html
+++ b/privacy.html
@@ -233,6 +233,7 @@
         <nav class="footer__legal">
           <a href="privacy.html">Privacy Policy</a>
           <a href="terms.html">Terms of Service</a>
+          <a href="sitemap.html">Sitemap</a>
         </nav>
       </div>
     </div>
