--- a/sitemap.html
+++ b/sitemap.html
@@ -3,20 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us - 21+ Years of Professional Cleaning | Dorys Janitorial</title>
-  <meta name="description" content="Learn about Dorys Janitorial Cleaning Services - serving Massachusetts since 2004. Licensed (HIC #213341), $2M insured, and committed to excellence. Meet our team!">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  <!-- Primary SEO Meta Tags -->
+  <title>Sitemap - Dorys Janitorial Cleaning Services | Massachusetts</title>
+  <meta name="description" content="Navigate our website easily with our sitemap. Find all pages for Dorys Janitorial Cleaning Services including services, locations, and contact information.">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://doryscleaningservices.com/about.html">
 
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://doryscleaningservices.com/sitemap.html">
+
+  <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://doryscleaningservices.com/about.html">
-  <meta property="og:title" content="About Dorys Janitorial - 21+ Years of Excellence">
-  <meta property="og:description" content="Professional cleaning services in Massachusetts since 2004. Licensed, insured, and committed to excellence.">
+  <meta property="og:url" content="https://doryscleaningservices.com/sitemap.html">
+  <meta property="og:title" content="Sitemap - Dorys Janitorial Cleaning Services">
+  <meta property="og:description" content="Navigate our website easily with our sitemap.">
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="assets/images/logo/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/images/logo/apple-touch-icon.png">
+
+  <!-- Preconnect for Performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@600;700;800&display=swap" rel="stylesheet">
 
+  <!-- Stylesheets -->
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="stylesheet" href="assets/css/components.css">
   <link rel="stylesheet" href="assets/css/header.css">
@@ -26,25 +40,49 @@
   <link rel="stylesheet" href="assets/css/responsive.css">
   <link rel="stylesheet" href="assets/css/premium.css">
 
+  <style>
+    .sitemap-section {
+      margin-bottom: 3rem;
+    }
+    .sitemap-section h3 {
+      color: var(--color-primary);
+      margin-bottom: 1rem;
+      padding-bottom: 0.5rem;
+      border-bottom: 2px solid var(--color-primary-light);
+    }
+    .sitemap-list {
+      list-style: none;
+      padding: 0;
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      gap: 0.75rem;
+    }
+    .sitemap-list a {
+      color: var(--color-text);
+      text-decoration: none;
+      transition: color 0.2s;
+    }
+    .sitemap-list a:hover {
+      color: var(--color-primary);
+    }
+    .sitemap-list--services {
+      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    }
+  </style>
+
+  <!-- Schema.org Structured Data -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "AboutPage",
-    "name": "About Dorys Janitorial Cleaning Services",
-    "description": "Learn about our 21+ years of professional cleaning services in Massachusetts",
-    "url": "https://doryscleaningservices.com/about.html",
-    "mainEntity": {
-      "@type": "Organization",
-      "name": "Dorys Janitorial Cleaning Services Inc.",
-      "foundingDate": "2004",
-      "founder": {"@type": "Person", "name": "Janeva Thomas"},
-      "telephone": "+1-978-307-8107",
-      "email": "contact@doryscleaningservices.com"
-    }
+    "@type": "WebPage",
+    "name": "Sitemap - Dorys Janitorial Cleaning Services",
+    "description": "Complete sitemap for Dorys Janitorial Cleaning Services website",
+    "url": "https://doryscleaningservices.com/sitemap.html"
   }
   </script>
 </head>
 <body>
+  <!-- Skip Link for Accessibility -->
   <a href="#main-content" class="skip-link">Skip to main content</a>
 
   <!-- Top Bar -->
@@ -142,7 +180,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a href="about.html" class="nav-link nav-link--active">About Us</a>
+            <a href="about.html" class="nav-link">About Us</a>
           </li>
           <li class="nav-item">
             <a href="reviews.html" class="nav-link">Reviews</a>
@@ -171,155 +209,101 @@
     <div class="container">
       <ol class="breadcrumb__list">
         <li class="breadcrumb__item"><a href="/" class="breadcrumb__link">Home</a></li>
-        <li class="breadcrumb__item" aria-current="page">About Us</li>
+        <li class="breadcrumb__item" aria-current="page">Sitemap</li>
       </ol>
     </div>
   </nav>
 
+  <!-- Main Content -->
   <main id="main-content">
-    <!-- Hero -->
+    <!-- Hero Section -->
     <section class="hero hero--inner">
       <div class="hero__background">
-        <img src="assets/images/services/deep-cleaning.jpg" alt="Dorys Janitorial team - professional cleaning services" loading="eager">
+        <img src="assets/images/services/janitorial-service.jpg" alt="Dorys Janitorial Cleaning Services Sitemap" loading="eager">
         <div class="hero__overlay hero__overlay--gradient"></div>
       </div>
       <div class="container">
         <div class="hero__content hero__content--center">
-          <h1 class="hero__title">About Dorys Janitorial</h1>
-          <p class="hero__subtitle">Over 21 years of professional cleaning excellence in Massachusetts. Licensed, insured, and committed to making your space shine.</p>
+          <h1 class="hero__title">Sitemap</h1>
+          <p class="hero__subtitle">Navigate our website easily and find all the information you need about our professional cleaning services in Massachusetts.</p>
         </div>
       </div>
     </section>
 
-    <!-- Our Story -->
+    <!-- Sitemap Content -->
     <section class="section">
       <div class="container">
-        <div class="two-col">
-          <div class="animate-on-scroll animate-fade-right">
-            <h2 class="mb-lg">Our Story</h2>
-            <p class="lead">Founded in 2004 by Janeva Thomas, Dorys Janitorial Cleaning Services has grown from a small local business to one of Massachusetts' most trusted cleaning companies.</p>
-            <p>For over 21 years, we've been serving homes and businesses across Massachusetts with a simple mission: deliver exceptional cleaning results with attention to detail and clear communication.</p>
-            <p>What started as a commitment to providing reliable, high-quality cleaning services has blossomed into a company that serves over 100 cities throughout the state. Our growth is a testament to the trust our clients place in us and our dedication to exceeding expectations.</p>
-            <p>Today, we're proud to be fully licensed and carry $2,000,000 in insurance coverage, giving our clients complete peace of mind. Our team of trained professionals uses the latest equipment and eco-friendly products to deliver results that speak for themselves.</p>
-          </div>
-          <div class="animate-on-scroll animate-fade-left animate-delay-200">
-            <div class="stats">
-              <div class="stat">
-                <div class="stat__value" data-counter="21" data-suffix="+">0</div>
-                <div class="stat__label">Years in Business</div>
-              </div>
-              <div class="stat">
-                <div class="stat__value" data-counter="100" data-suffix="+">0</div>
-                <div class="stat__label">Cities Served</div>
-              </div>
-              <div class="stat">
-                <div class="stat__value" data-counter="2" data-suffix="M">0</div>
-                <div class="stat__label">Insurance Coverage</div>
-              </div>
-              <div class="stat">
-                <div class="stat__value" data-counter="5">0</div>
-                <div class="stat__label">Star Rating</div>
-              </div>
-            </div>
-          </div>
+        <!-- Main Pages -->
+        <div class="sitemap-section">
+          <h3>Main Pages</h3>
+          <ul class="sitemap-list">
+            <li><a href="/">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="reviews.html">Customer Reviews</a></li>
+            <li><a href="privacy.html">Privacy Policy</a></li>
+            <li><a href="terms.html">Terms of Service</a></li>
+          </ul>
+        </div>
+
+        <!-- Services -->
+        <div class="sitemap-section">
+          <h3>Our Services</h3>
+          <ul class="sitemap-list sitemap-list--services">
+            <li><a href="services/">All Services</a></li>
+            <li><a href="services/janitorial-service/">Janitorial Service</a></li>
+            <li><a href="services/deep-cleaning/">Deep Cleaning</a></li>
+            <li><a href="services/carpet-cleaning/">Carpet Cleaning</a></li>
+            <li><a href="services/upholstery-cleaning/">Upholstery Cleaning</a></li>
+            <li><a href="services/general-housekeeping/">General Housekeeping</a></li>
+          </ul>
+        </div>
+
+        <!-- Service Areas -->
+        <div class="sitemap-section">
+          <h3>Service Areas</h3>
+          <ul class="sitemap-list">
+            <li><a href="locations/">All Service Areas</a></li>
+            <li><a href="locations/marlborough-ma.html">Marlborough, MA</a></li>
+            <li><a href="locations/framingham-ma.html">Framingham, MA</a></li>
+            <li><a href="locations/worcester-ma.html">Worcester, MA</a></li>
+            <li><a href="locations/hudson-ma.html">Hudson, MA</a></li>
+            <li><a href="locations/westborough-ma.html">Westborough, MA</a></li>
+            <li><a href="locations/natick-ma.html">Natick, MA</a></li>
+            <li><a href="locations/newton-ma.html">Newton, MA</a></li>
+            <li><a href="locations/wellesley-ma.html">Wellesley, MA</a></li>
+            <li><a href="locations/sudbury-ma.html">Sudbury, MA</a></li>
+            <li><a href="locations/concord-ma.html">Concord, MA</a></li>
+            <li><a href="locations/lexington-ma.html">Lexington, MA</a></li>
+            <li><a href="locations/waltham-ma.html">Waltham, MA</a></li>
+            <li><a href="locations/shrewsbury-ma.html">Shrewsbury, MA</a></li>
+            <li><a href="locations/northborough-ma.html">Northborough, MA</a></li>
+            <li><a href="locations/southborough-ma.html">Southborough, MA</a></li>
+          </ul>
+          <p style="margin-top: 1rem;"><a href="locations/" class="btn btn--primary">View All 100+ Service Areas</a></p>
+        </div>
+
+        <!-- XML Sitemap -->
+        <div class="sitemap-section">
+          <h3>For Search Engines</h3>
+          <p>Looking for our XML sitemap? <a href="sitemap.xml" style="color: var(--color-primary);">View XML Sitemap</a></p>
         </div>
       </div>
     </section>
 
-    <!-- Our Values -->
-    <section class="section section--alt">
+    <!-- CTA Section -->
+    <section class="section--cta">
       <div class="container">
-        <h2 class="section__title animate-on-scroll animate-fade-up">Our Core Values</h2>
-        <p class="section__subtitle animate-on-scroll animate-fade-up animate-delay-100">These principles guide everything we do at Dorys Janitorial.</p>
-
-        <div class="grid grid--3 stagger-children">
-          <div class="card service-card">
-            <div class="service-card__icon">
-              <svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/></svg>
-            </div>
-            <h3 class="service-card__title">Quality First</h3>
-            <p class="service-card__text">We never cut corners. Every job receives the same level of attention and thoroughness, regardless of size.</p>
+        <div class="cta-box--large animate-on-scroll animate-fade-up">
+          <h2 class="cta-box__title">Ready for a Cleaner Space?</h2>
+          <p class="cta-box__text">Get your free, no-obligation quote today and discover why Massachusetts trusts Dorys Janitorial for all their cleaning needs.</p>
+          <div class="cta-box__actions">
+            <a href="contact.html" class="btn btn--white btn--lg" data-track="cta-final-quote">Get Your Free Quote</a>
+            <a href="tel:+19783078107" class="btn btn--outline-light btn--lg" data-track="cta-final-call">
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/></svg>
+              Call (978) 307-8107
+            </a>
           </div>
-
-          <div class="card service-card">
-            <div class="service-card__icon">
-              <svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm0 10.99h7c-.53 4.12-3.28 7.79-7 8.94V12H5V6.3l7-3.11v8.8z"/></svg>
-            </div>
-            <h3 class="service-card__title">Trust & Reliability</h3>
-            <p class="service-card__text">We show up on time, every time. Our clients trust us with their homes and businesses, and we honor that trust.</p>
-          </div>
-
-          <div class="card service-card">
-            <div class="service-card__icon">
-              <svg viewBox="0 0 24 24" fill="currentColor"><path d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 22l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-7 12h-2v-2h2v2zm0-4h-2V6h2v4z"/></svg>
-            </div>
-            <h3 class="service-card__title">Clear Communication</h3>
-            <p class="service-card__text">We keep you informed every step of the way and respond promptly to all inquiries and concerns.</p>
-          </div>
-
-          <div class="card service-card">
-            <div class="service-card__icon">
-              <svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg>
-            </div>
-            <h3 class="service-card__title">Customer Focus</h3>
-            <p class="service-card__text">Your satisfaction is our priority. We customize our services to meet your specific needs and preferences.</p>
-          </div>
-
-          <div class="card service-card">
-            <div class="service-card__icon">
-              <svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 17.93c-3.95-.49-7-3.85-7-7.93 0-.62.08-1.21.21-1.79L9 15v1c0 1.1.9 2 2 2v1.93zm6.9-2.54c-.26-.81-1-1.39-1.9-1.39h-1v-3c0-.55-.45-1-1-1H8v-2h2c.55 0 1-.45 1-1V7h2c1.1 0 2-.9 2-2v-.41c2.93 1.19 5 4.06 5 7.41 0 2.08-.8 3.97-2.1 5.39z"/></svg>
-            </div>
-            <h3 class="service-card__title">Eco-Friendly</h3>
-            <p class="service-card__text">We use environmentally responsible products and methods to protect your space and our planet.</p>
-          </div>
-
-          <div class="card service-card">
-            <div class="service-card__icon">
-              <svg viewBox="0 0 24 24" fill="currentColor"><path d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"/></svg>
-            </div>
-            <h3 class="service-card__title">Professional Team</h3>
-            <p class="service-card__text">Our trained, background-checked staff members are professionals who take pride in their work.</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Credentials -->
-    <section class="section">
-      <div class="container">
-        <h2 class="section__title animate-on-scroll animate-fade-up">Our Credentials</h2>
-        <p class="section__subtitle animate-on-scroll animate-fade-up animate-delay-100">Licensed, insured, and committed to the highest standards.</p>
-
-        <div class="grid grid--3 animate-on-scroll animate-fade-up animate-delay-200">
-          <div class="card" style="padding: var(--space-xl); text-align: center;">
-            <svg width="60" height="60" viewBox="0 0 24 24" fill="var(--color-success)" style="margin: 0 auto var(--space-md);"><path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm0 10.99h7c-.53 4.12-3.28 7.79-7 8.94V12H5V6.3l7-3.11v8.8z"/></svg>
-            <h3>$2,000,000 Insurance</h3>
-            <p class="text-muted">Fully insured through Ohio Security Insurance Company for your complete protection.</p>
-          </div>
-
-          <div class="card" style="padding: var(--space-xl); text-align: center;">
-            <svg width="60" height="60" viewBox="0 0 24 24" fill="var(--color-success)" style="margin: 0 auto var(--space-md);"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/></svg>
-            <h3>MA Licensed HIC #213341</h3>
-            <p class="text-muted">Fully licensed Home Improvement Contractor in the Commonwealth of Massachusetts.</p>
-          </div>
-
-          <div class="card" style="padding: var(--space-xl); text-align: center;">
-            <svg width="60" height="60" viewBox="0 0 24 24" fill="var(--color-success)" style="margin: 0 auto var(--space-md);"><path d="M19 3h-4.18C14.4 1.84 13.3 1 12 1c-1.3 0-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm2 14H7v-2h7v2zm3-4H7v-2h10v2zm0-4H7V7h10v2z"/></svg>
-            <h3>21+ Years Experience</h3>
-            <p class="text-muted">Serving Massachusetts since 2004 with consistent, reliable professional cleaning.</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- CTA -->
-    <section class="section section--primary">
-      <div class="container text-center">
-        <h2 class="text-white mb-lg">Ready to Experience the Dorys Difference?</h2>
-        <p class="lead text-white mb-xl" style="opacity: 0.9;">Get a free quote and see why Massachusetts trusts us for their cleaning needs.</p>
-        <div class="btn-group btn-group--center">
-          <a href="contact.html" class="btn btn--white btn--lg">Get Free Quote</a>
-          <a href="tel:+19783078107" class="btn btn--outline-light btn--lg">Call (978) 307-8107</a>
         </div>
       </div>
     </section>
@@ -489,10 +473,12 @@
     </div>
   </footer>
 
+  <!-- Back to Top Button -->
   <button class="back-to-top" aria-label="Back to top">
     <svg viewBox="0 0 24 24" fill="currentColor"><path d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"/></svg>
   </button>
 
+  <!-- Scripts -->
   <script src="assets/js/main.js"></script>
   <script src="assets/js/header.js"></script>
   <script src="assets/js/animations.js"></script>
