--- a/locations/index.html
+++ b/locations/index.html
@@ -216,143 +216,129 @@
   </style>
 </head>
 <body>
+  <!-- Skip Link for Accessibility -->
+  <a href="#main-content" class="skip-link">Skip to main content</a>
+
   <!-- Top Bar -->
   <div class="top-bar">
     <div class="container">
-      <div class="top-bar__content">
-        <div class="top-bar__contact">
-          <a href="tel:+19783078107" class="top-bar__link">
-            <svg class="top-bar__icon top-bar__icon--phone" viewBox="0 0 24 24" fill="currentColor" width="18" height="18">
-              <path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/>
-            </svg>
-            <span>(978) 307-8107</span>
-          </a>
-          <a href="mailto:contact@doryscleaningservices.com" class="top-bar__link">
-            <svg class="top-bar__icon top-bar__icon--email" viewBox="0 0 24 24" fill="currentColor" width="18" height="18">
-              <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
-            </svg>
-            <span>contact@doryscleaningservices.com</span>
-          </a>
-        </div>
-        <div class="top-bar__social">
-          <a href="https://www.facebook.com/cleanersservicesMA" target="_blank" rel="noopener noreferrer" aria-label="Facebook" class="top-bar__social-link">
-            <svg viewBox="0 0 24 24" fill="currentColor" width="18" height="18"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg>
-          </a>
-          <a href="https://www.instagram.com/dorysjanitorialcleaning/" target="_blank" rel="noopener noreferrer" aria-label="Instagram" class="top-bar__social-link">
-            <svg viewBox="0 0 24 24" fill="currentColor" width="18" height="18"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zM12 16a4 4 0 110-8 4 4 0 010 8zm6.406-11.845a1.44 1.44 0 100 2.881 1.44 1.44 0 000-2.881z"/></svg>
-          </a>
-          <a href="https://www.tiktok.com/@user8303581710815" target="_blank" rel="noopener noreferrer" aria-label="TikTok" class="top-bar__social-link">
-            <svg viewBox="0 0 24 24" fill="currentColor" width="18" height="18"><path d="M19.59 6.69a4.83 4.83 0 01-3.77-4.25V2h-3.45v13.67a2.89 2.89 0 01-5.2 1.74 2.89 2.89 0 012.31-4.64 2.93 2.93 0 01.88.13V9.4a6.84 6.84 0 00-1-.05A6.33 6.33 0 005 20.1a6.34 6.34 0 0010.86-4.43v-7a8.16 8.16 0 004.77 1.52v-3.4a4.85 4.85 0 01-1-.1z"/></svg>
-          </a>
-          <a href="https://www.youtube.com/@DorysJanitorial" target="_blank" rel="noopener noreferrer" aria-label="YouTube" class="top-bar__social-link">
-            <svg viewBox="0 0 24 24" fill="currentColor" width="18" height="18"><path d="M23.498 6.186a3.016 3.016 0 00-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 00.502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 002.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 002.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/></svg>
-          </a>
-        </div>
+      <div class="top-bar__contact">
+        <a href="tel:+19783078107" class="top-bar__item" data-track="phone-topbar">
+          <svg class="top-bar__icon" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/>
+          </svg>
+          <span>(978) 307-8107</span>
+        </a>
+        <a href="mailto:contact@doryscleaningservices.com" class="top-bar__item" data-track="email-topbar">
+          <svg class="top-bar__icon" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
+          </svg>
+          <span>contact@doryscleaningservices.com</span>
+        </a>
+      </div>
+      <div class="top-bar__social">
+        <a href="https://www.facebook.com/cleanersservicesMA" target="_blank" rel="noopener noreferrer" class="top-bar__social-link" aria-label="Facebook">
+          <svg viewBox="0 0 24 24" fill="currentColor"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg>
+        </a>
+        <a href="https://www.instagram.com/dorysjanitorialcleaning/" target="_blank" rel="noopener noreferrer" class="top-bar__social-link" aria-label="Instagram">
+          <svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/></svg>
+        </a>
+        <a href="https://www.tiktok.com/@user8303581710815" target="_blank" rel="noopener noreferrer" class="top-bar__social-link" aria-label="TikTok">
+          <svg viewBox="0 0 24 24" fill="currentColor"><path d="M12.525.02c1.31-.02 2.61-.01 3.91-.02.08 1.53.63 3.09 1.75 4.17 1.12 1.11 2.7 1.62 4.24 1.79v4.03c-1.44-.05-2.89-.35-4.2-.97-.57-.26-1.1-.59-1.62-.93-.01 2.92.01 5.84-.02 8.75-.08 1.4-.54 2.79-1.35 3.94-1.31 1.92-3.58 3.17-5.91 3.21-1.43.08-2.86-.31-4.08-1.03-2.02-1.19-3.44-3.37-3.65-5.71-.02-.5-.03-1-.01-1.49.18-1.9 1.12-3.72 2.58-4.96 1.66-1.44 3.98-2.13 6.15-1.72.02 1.48-.04 2.96-.04 4.44-.99-.32-2.15-.23-3.02.37-.63.41-1.11 1.04-1.36 1.75-.21.51-.15 1.07-.14 1.61.24 1.64 1.82 3.02 3.5 2.87 1.12-.01 2.19-.66 2.77-1.61.19-.33.4-.67.41-1.06.1-1.79.06-3.57.07-5.36.01-4.03-.01-8.05.02-12.07z"/></svg>
+        </a>
+        <a href="https://www.youtube.com/@DorysJanitorial" target="_blank" rel="noopener noreferrer" class="top-bar__social-link" aria-label="YouTube">
+          <svg viewBox="0 0 24 24" fill="currentColor"><path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/></svg>
+        </a>
       </div>
     </div>
   </div>
 
   <!-- Header -->
-  <header class="header" id="header">
-    <div class="container">
-      <div class="header__content">
-        <a href="../index.html" class="header__logo">
-          <img src="../assets/images/logo/logo.jpg" alt="Dorys Janitorial Cleaning Services Logo" class="header__logo-img">
-          <div class="header__logo-text">
-            <span class="header__logo-name">Dorys Cleaning</span>
-            <span class="header__logo-tagline">Professional Janitorial Services</span>
-          </div>
-        </a>
+  <header class="header">
+    <div class="container header__wrapper">
+      <a href="../index.html" class="header__logo">
+        <img src="../assets/images/logo/logo-original.jpg" alt="Dorys Janitorial Cleaning Services Logo" width="180" height="60">
+      </a>
 
-        <nav class="header__nav" id="main-nav">
-          <ul class="header__menu">
-            <li class="header__menu-item">
-              <a href="../index.html" class="header__menu-link">Home</a>
-            </li>
-            <li class="header__menu-item header__menu-item--dropdown">
-              <a href="../services/index.html" class="header__menu-link">
-                Services
-                <svg class="header__dropdown-icon" viewBox="0 0 24 24" fill="currentColor" width="16" height="16"><path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"/></svg>
+      <nav class="header__nav" aria-label="Main navigation">
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a href="../index.html" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item has-dropdown">
+            <a href="../services/" class="nav-link">
+              Services
+              <svg class="nav-link__icon" viewBox="0 0 24 24" fill="currentColor"><path d="M7 10l5 5 5-5z"/></svg>
+            </a>
+            <div class="nav-dropdown">
+              <a href="../services/janitorial-service/" class="nav-dropdown__link">
+                <svg class="nav-dropdown__icon" viewBox="0 0 24 24" fill="currentColor"><path d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-7 14h-2v-4H8l4-4 4 4h-2v4z"/></svg>
+                Janitorial Service
               </a>
-              <ul class="header__dropdown">
-                <li><a href="../services/janitorial-service/index.html">Janitorial Service</a></li>
-                <li><a href="../services/deep-cleaning/index.html">Deep Cleaning</a></li>
-                <li><a href="../services/upholstery-cleaning/index.html">Upholstery Cleaning</a></li>
-                <li><a href="../services/carpet-cleaning/index.html">Carpet Cleaning</a></li>
-                <li><a href="../services/general-housekeeping/index.html">General Housekeeping</a></li>
-              </ul>
-            </li>
-            <li class="header__menu-item header__menu-item--dropdown">
-              <a href="index.html" class="header__menu-link header__menu-link--active">
-                Service Areas
-                <svg class="header__dropdown-icon" viewBox="0 0 24 24" fill="currentColor" width="16" height="16"><path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"/></svg>
+              <a href="../services/deep-cleaning/" class="nav-dropdown__link">
+                <svg class="nav-dropdown__icon" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/></svg>
+                Deep Cleaning
               </a>
-              <ul class="header__dropdown header__dropdown--mega">
-                <li><a href="hudson-ma.html">Hudson</a></li>
-                <li><a href="framingham-ma.html">Framingham</a></li>
-                <li><a href="marlborough-ma.html">Marlborough</a></li>
-                <li><a href="worcester-ma.html">Worcester</a></li>
-                <li><a href="natick-ma.html">Natick</a></li>
-                <li><a href="index.html" class="header__dropdown-all">View All Areas →</a></li>
-              </ul>
-            </li>
-            <li class="header__menu-item">
-              <a href="../about.html" class="header__menu-link">About Us</a>
-            </li>
-            <li class="header__menu-item">
-              <a href="../reviews.html" class="header__menu-link">Reviews</a>
-            </li>
-            <li class="header__menu-item">
-              <a href="../contact.html" class="header__menu-link">Contact</a>
-            </li>
-          </ul>
-        </nav>
+              <a href="../services/upholstery-cleaning/" class="nav-dropdown__link">
+                <svg class="nav-dropdown__icon" viewBox="0 0 24 24" fill="currentColor"><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 14H4V8l8 5 8-5v10zm-8-7L4 6h16l-8 5z"/></svg>
+                Upholstery Cleaning
+              </a>
+              <a href="../services/carpet-cleaning/" class="nav-dropdown__link">
+                <svg class="nav-dropdown__icon" viewBox="0 0 24 24" fill="currentColor"><path d="M4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm16-4H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm0 14H8V4h12v12z"/></svg>
+                Carpet Cleaning
+              </a>
+              <a href="../services/general-housekeeping/" class="nav-dropdown__link">
+                <svg class="nav-dropdown__icon" viewBox="0 0 24 24" fill="currentColor"><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/></svg>
+                General Housekeeping
+              </a>
+            </div>
+          </li>
+          <li class="nav-item has-dropdown">
+            <a href="./" class="nav-link nav-link--active">
+              Service Areas
+              <svg class="nav-link__icon" viewBox="0 0 24 24" fill="currentColor"><path d="M7 10l5 5 5-5z"/></svg>
+            </a>
+            <div class="nav-dropdown nav-dropdown--mega">
+              <span class="nav-dropdown__title">Popular Cities</span>
+              <div class="nav-dropdown__grid">
+                <a href="marlborough-ma.html" class="nav-dropdown__link">Marlborough</a>
+                <a href="framingham-ma.html" class="nav-dropdown__link">Framingham</a>
+                <a href="worcester-ma.html" class="nav-dropdown__link">Worcester</a>
+                <a href="hudson-ma.html" class="nav-dropdown__link">Hudson</a>
+                <a href="westborough-ma.html" class="nav-dropdown__link">Westborough</a>
+                <a href="natick-ma.html" class="nav-dropdown__link">Natick</a>
+                <a href="newton-ma.html" class="nav-dropdown__link">Newton</a>
+                <a href="wellesley-ma.html" class="nav-dropdown__link">Wellesley</a>
+                <a href="./" class="nav-dropdown__link text-primary font-semibold">View All Cities →</a>
+              </div>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a href="../about.html" class="nav-link">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a href="../reviews.html" class="nav-link">Reviews</a>
+          </li>
+          <li class="nav-item">
+            <a href="../contact.html" class="nav-link">Contact</a>
+          </li>
+        </ul>
+      </nav>
 
-        <div class="header__actions">
-          <a href="../contact.html" class="btn btn--primary btn--pulse">
-            Get a Free Quote
-          </a>
-          <button class="header__mobile-toggle" id="mobile-toggle" aria-label="Toggle menu">
-            <span></span>
-            <span></span>
-            <span></span>
-          </button>
-        </div>
-      </div>
+      <a href="../contact.html" class="btn btn--primary header__cta hide-mobile" data-track="cta-header">Get Free Quote</a>
+
+      <button class="header__toggle" aria-label="Toggle navigation menu" aria-expanded="false">
+        <span class="header__toggle-icon">
+          <span></span>
+          <span></span>
+          <span></span>
+        </span>
+      </button>
     </div>
+    <div class="header__overlay"></div>
   </header>
 
-  <!-- Mobile Menu -->
-  <div class="mobile-menu" id="mobile-menu">
-    <div class="mobile-menu__content">
-      <ul class="mobile-menu__list">
-        <li><a href="../index.html">Home</a></li>
-        <li class="mobile-menu__item--has-children">
-          <a href="../services/index.html">Services</a>
-          <ul class="mobile-menu__submenu">
-            <li><a href="../services/janitorial-service/index.html">Janitorial Service</a></li>
-            <li><a href="../services/deep-cleaning/index.html">Deep Cleaning</a></li>
-            <li><a href="../services/upholstery-cleaning/index.html">Upholstery Cleaning</a></li>
-            <li><a href="../services/carpet-cleaning/index.html">Carpet Cleaning</a></li>
-            <li><a href="../services/general-housekeeping/index.html">General Housekeeping</a></li>
-          </ul>
-        </li>
-        <li><a href="index.html" class="active">Service Areas</a></li>
-        <li><a href="../about.html">About Us</a></li>
-        <li><a href="../reviews.html">Reviews</a></li>
-        <li><a href="../contact.html">Contact</a></li>
-      </ul>
-      <div class="mobile-menu__cta">
-        <a href="tel:+19783078107" class="btn btn--secondary btn--block">
-          <svg viewBox="0 0 24 24" fill="currentColor" width="20" height="20"><path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/></svg>
-          Call (978) 307-8107
-        </a>
-        <a href="../contact.html" class="btn btn--primary btn--block">Get a Free Quote</a>
-      </div>
-    </div>
-  </div>
-
-  <main>
+  <main id="main-content">
     <!-- Breadcrumb -->
     <nav class="breadcrumb" aria-label="Breadcrumb">
       <div class="container">
