--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
   <link rel="stylesheet" href="assets/css/lightbox.css">
   <link rel="stylesheet" href="assets/css/responsive.css">
   <link rel="stylesheet" href="assets/css/premium.css">
+  <link rel="stylesheet" href="assets/css/premium-v2.css">
 
   <!-- Schema.org Structured Data - Organization -->
   <script type="application/ld+json">
@@ -540,6 +541,51 @@
               </a>
             </div>
           </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- How It Works Section -->
+    <section class="process-section">
+      <div class="container">
+        <div class="process-header">
+          <span class="section__badge">How It Works</span>
+          <h2 class="section__title">Simple 4-Step Process</h2>
+          <p class="section__description">Getting your space professionally cleaned is easy. Here's how we deliver exceptional results every time.</p>
+        </div>
+
+        <div class="process-grid">
+          <div class="process-step">
+            <div class="process-step-number">1</div>
+            <div class="process-step-content">
+              <h3 class="process-step-title">Get a Free Quote</h3>
+              <p class="process-step-text">Call us or fill out our form. We'll discuss your needs and provide a no-obligation estimate.</p>
+            </div>
+          </div>
+
+          <div class="process-step">
+            <div class="process-step-number">2</div>
+            <div class="process-step-content">
+              <h3 class="process-step-title">Schedule Your Service</h3>
+              <p class="process-step-text">Pick a date and time that works for you. We offer flexible scheduling including early mornings and evenings.</p>
+            </div>
+          </div>
+
+          <div class="process-step">
+            <div class="process-step-number">3</div>
+            <div class="process-step-content">
+              <h3 class="process-step-title">We Clean Your Space</h3>
+              <p class="process-step-text">Our trained professionals arrive on time with all equipment needed to deliver exceptional results.</p>
+            </div>
+          </div>
+
+          <div class="process-step">
+            <div class="process-step-number">4</div>
+            <div class="process-step-content">
+              <h3 class="process-step-title">Enjoy the Results</h3>
+              <p class="process-step-text">Walk into a spotless space. We guarantee your satisfaction with every cleaning service.</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
