--- a/reviews.html
+++ b/reviews.html
@@ -51,6 +51,7 @@
   <link rel="stylesheet" href="assets/css/animations.css">
   <link rel="stylesheet" href="assets/css/responsive.css">
   <link rel="stylesheet" href="assets/css/premium.css">
+  <link rel="stylesheet" href="assets/css/premium-v2.css">
 
   <!-- Schema.org Structured Data -->
   <script type="application/ld+json">
