--- a/services/deep-cleaning/worcester-ma.html
+++ b/services/deep-cleaning/worcester-ma.html
@@ -34,6 +34,8 @@
   <link rel="stylesheet" href="/assets/css/animations.css">
   <link rel="stylesheet" href="/assets/css/lightbox.css">
   <link rel="stylesheet" href="/assets/css/responsive.css">
+  <link rel="stylesheet" href="/assets/css/premium.css">
+  <link rel="stylesheet" href="/assets/css/premium-v2.css">
 
   <!-- Schema.org LocalBusiness -->
   <script type="application/ld+json">
