--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,7 @@
   <link rel="stylesheet" href="assets/css/animations.css">
   <link rel="stylesheet" href="assets/css/responsive.css">
   <link rel="stylesheet" href="assets/css/premium.css">
+  <link rel="stylesheet" href="assets/css/premium-v2.css">
 
   <script type="application/ld+json">
   {
