--- a/sitemap.html
+++ b/sitemap.html
@@ -39,6 +39,7 @@
   <link rel="stylesheet" href="assets/css/animations.css">
   <link rel="stylesheet" href="assets/css/responsive.css">
   <link rel="stylesheet" href="assets/css/premium.css">
+  <link rel="stylesheet" href="assets/css/premium-v2.css">
 
   <style>
     .sitemap-section {
