--- a/terms.html
+++ b/terms.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="assets/css/animations.css">
   <link rel="stylesheet" href="assets/css/responsive.css">
   <link rel="stylesheet" href="assets/css/premium.css">
+  <link rel="stylesheet" href="assets/css/premium-v2.css">
 </head>
 <body>
   <a href="#main-content" class="skip-link">Skip to main content</a>
