Refactor navigation links to use anchor tags for smooth scrolling; update service sections with trust credentials and revised quotes for deep cleaning, housekeeping, janitorial, upholstery services; ensure consistency in footer links across all service pages.

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
         </ul>
       </nav>
 
-      <a href="contact.html" class="btn btn--primary header__cta hide-mobile" data-track="cta-header">Get Free Quote</a>
+      <a href="#contact" class="btn btn--primary header__cta hide-mobile" data-track="cta-header">Get Free Quote</a>
 
       <button class="header__toggle" aria-label="Toggle navigation menu" aria-expanded="false">
         <span class="header__toggle-icon">
@@ -439,7 +439,7 @@
               <svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor"><path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/></svg>
               Call Now: (978) 307-8107
             </a>
-            <a href="contact.html" class="btn btn--white btn--xl" data-track="cta-hero-quote">
+            <a href="#contact" class="btn btn--white btn--xl" data-track="cta-hero-quote">
               Get a Free Estimate
               <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/></svg>
             </a>
@@ -735,7 +735,7 @@
               <li>Consistent, reliable results every time</li>
               <li>21+ years of experience in Massachusetts</li>
             </ul>
-            <a href="contact.html" class="btn btn--primary btn--lg" data-track="cta-video-quote">Get a Free Quote</a>
+            <a href="#contact" class="btn btn--primary btn--lg" data-track="cta-video-quote">Get a Free Quote</a>
           </div>
         </div>
 
@@ -924,7 +924,7 @@
           <h2 class="cta-box__title">Ready for a Cleaner Space?</h2>
           <p class="cta-box__text">Get your free, no-obligation quote today and discover why Massachusetts trusts Dorys Janitorial for all their cleaning needs.</p>
           <div class="cta-box__actions">
-            <a href="contact.html" class="btn btn--white btn--lg" data-track="cta-final-quote">Get Your Free Quote</a>
+            <a href="#contact" class="btn btn--white btn--lg" data-track="cta-final-quote">Get Your Free Quote</a>
             <a href="tel:+19783078107" class="btn btn--outline-light btn--lg" data-track="cta-final-call">
               <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/></svg>
               Call (978) 307-8107
@@ -943,7 +943,7 @@
         <h2 class="footer__cta-title">Get Your Free Quote Today!</h2>
         <p class="footer__cta-text">Professional cleaning services with 21+ years of experience. Licensed, insured, and ready to make your space shine.</p>
         <div class="footer__cta-buttons">
-          <a href="contact.html" class="btn btn--white btn--lg" data-track="cta-footer-quote">Request Free Quote</a>
+          <a href="#contact" class="btn btn--white btn--lg" data-track="cta-footer-quote">Request Free Quote</a>
           <a href="tel:+19783078107" class="btn btn--outline-light btn--lg" data-track="cta-footer-call">Call (978) 307-8107</a>
         </div>
       </div>
