--- a/locations/index.html
+++ b/locations/index.html
@@ -469,18 +469,18 @@
             </div>
           </li>
           <li class="nav-item">
-            <a href="../about.html" class="nav-link">About Us</a>
+            <a href="../#about" class="nav-link">About Us</a>
           </li>
           <li class="nav-item">
-            <a href="../reviews.html" class="nav-link">Reviews</a>
+            <a href="../#reviews" class="nav-link">Reviews</a>
           </li>
           <li class="nav-item">
-            <a href="../contact.html" class="nav-link">Contact</a>
+            <a href="../#contact" class="nav-link">Contact</a>
           </li>
         </ul>
       </nav>
 
-      <a href="../contact.html" class="btn btn--primary header__cta hide-mobile" data-track="cta-header">Get Free Quote</a>
+      <a href="../#contact" class="btn btn--primary header__cta hide-mobile" data-track="cta-header">Get Free Quote</a>
 
       <button class="header__toggle" aria-label="Toggle navigation menu" aria-expanded="false">
         <span class="header__toggle-icon">
@@ -1229,7 +1229,7 @@
             <h2 class="cta-box__title">Don't See Your City Listed?</h2>
             <p class="cta-box__text">We may still be able to help! Contact us to inquire about service in your area. We're constantly expanding our coverage across Massachusetts.</p>
             <div class="cta-box__actions">
-              <a href="../contact.html" class="btn btn--primary btn--lg btn--pulse">
+              <a href="../#contact" class="btn btn--primary btn--lg btn--pulse">
                 Contact Us
               </a>
               <a href="tel:+19783078107" class="btn btn--secondary btn--lg">
@@ -1251,7 +1251,7 @@
         <h2 class="footer__cta-title">Get Your Free Quote Today!</h2>
         <p class="footer__cta-text">Professional cleaning services with 21+ years of experience. Licensed, insured, and ready to make your space shine.</p>
         <div class="footer__cta-buttons">
-          <a href="../contact.html" class="btn btn--white btn--lg" data-track="cta-footer-quote">Request Free Quote</a>
+          <a href="../#contact" class="btn btn--white btn--lg" data-track="cta-footer-quote">Request Free Quote</a>
           <a href="tel:+19783078107" class="btn btn--outline-light btn--lg" data-track="cta-footer-call">Call (978) 307-8107</a>
         </div>
       </div>
@@ -1297,11 +1297,11 @@
           <h4 class="footer__title">Quick Links</h4>
           <ul class="footer__links">
             <li><a href="../">Home</a></li>
-            <li><a href="../about.html">About Us</a></li>
+            <li><a href="../#about">About Us</a></li>
             <li><a href="../services/">Services</a></li>
             <li><a href="./">Service Areas</a></li>
-            <li><a href="../reviews.html">Reviews</a></li>
-            <li><a href="../contact.html">Contact</a></li>
+            <li><a href="../#reviews">Reviews</a></li>
+            <li><a href="../#contact">Contact</a></li>
           </ul>
         </div>
 
