--- a/services/carpet-cleaning/index.html
+++ b/services/carpet-cleaning/index.html
@@ -92,12 +92,12 @@
               </div>
             </div>
           </li>
-          <li class="nav-item"><a href="../../about.html" class="nav-link">About Us</a></li>
-          <li class="nav-item"><a href="../../reviews.html" class="nav-link">Reviews</a></li>
-          <li class="nav-item"><a href="../../contact.html" class="nav-link">Contact</a></li>
+          <li class="nav-item"><a href="../../#about" class="nav-link">About Us</a></li>
+          <li class="nav-item"><a href="../../#reviews" class="nav-link">Reviews</a></li>
+          <li class="nav-item"><a href="../../#contact" class="nav-link">Contact</a></li>
         </ul>
       </nav>
-      <a href="../../contact.html" class="btn btn--primary header__cta hide-mobile">Get Free Quote</a>
+      <a href="../../#contact" class="btn btn--primary header__cta hide-mobile">Get Free Quote</a>
       <button class="header__toggle" aria-label="Toggle navigation menu" aria-expanded="false">
         <span class="header__toggle-icon"><span></span><span></span><span></span></span>
       </button>
@@ -127,7 +127,7 @@
           <h1 class="hero__title">Professional Janitorial Service</h1>
           <p class="hero__subtitle">Commercial cleaning excellence for offices, warehouses, and facilities across Massachusetts. 21+ years of trusted service.</p>
           <div class="hero__ctas">
-            <a href="../../contact.html" class="btn btn--primary btn--lg btn--pulse">Get a Free Quote</a>
+            <a href="../../#contact" class="btn btn--primary btn--lg btn--pulse">Get a Free Quote</a>
             <a href="tel:+19783078107" class="btn btn--outline-light btn--lg">Call (978) 307-8107</a>
           </div>
         </div>
@@ -199,13 +199,58 @@
       </div>
     </section>
 
+    <!-- Trust & Credentials Section -->
+    <section class="section section--gradient-blue">
+      <div class="container">
+        <div class="section__header section__header--center">
+          <span class="section__badge">Why Choose Dorys</span>
+          <h2 class="section__title">Trusted Carpet Cleaning Experts</h2>
+          <p class="section__description">For over 21 years, we've been restoring carpets across Massachusetts to like-new condition.</p>
+        </div>
+
+        <div class="trust-grid">
+          <div class="trust-card">
+            <div class="trust-card__icon">
+              <svg viewBox="0 0 24 24" fill="currentColor"><path d="M19 3h-4.18C14.4 1.84 13.3 1 12 1c-1.3 0-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm2 14H7v-2h7v2zm3-4H7v-2h10v2zm0-4H7V7h10v2z"/></svg>
+            </div>
+            <h3 class="trust-card__title">21+ Years Experience</h3>
+            <p class="trust-card__text">Serving Massachusetts since 2004 with professional carpet cleaning services.</p>
+          </div>
+
+          <div class="trust-card">
+            <div class="trust-card__icon">
+              <svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm0 10.99h7c-.53 4.12-3.28 7.79-7 8.94V12H5V6.3l7-3.11v8.8z"/></svg>
+            </div>
+            <h3 class="trust-card__title">Licensed & Insured</h3>
+            <p class="trust-card__text">MA HIC #213341 with $2,000,000 insurance for your complete peace of mind.</p>
+          </div>
+
+          <div class="trust-card">
+            <div class="trust-card__icon">
+              <svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
+            </div>
+            <h3 class="trust-card__title">5-Star Rated</h3>
+            <p class="trust-card__text">Consistently rated 5 stars by our satisfied clients on Google.</p>
+          </div>
+
+          <div class="trust-card">
+            <div class="trust-card__icon">
+              <svg viewBox="0 0 24 24" fill="currentColor"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/></svg>
+            </div>
+            <h3 class="trust-card__title">100+ Cities Served</h3>
+            <p class="trust-card__text">Serving homes and businesses throughout Massachusetts.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="section--cta">
       <div class="container">
         <div class="cta-box--large">
-          <h2 class="cta-box__title">Get a Free Janitorial Quote</h2>
-          <p class="cta-box__text">Let us create a customized cleaning plan for your business. Contact us today!</p>
+          <h2 class="cta-box__title">Get a Free Carpet Cleaning Quote</h2>
+          <p class="cta-box__text">Let us restore your carpets to like-new condition. Contact us today!</p>
           <div class="cta-box__actions">
-            <a href="../../contact.html" class="btn btn--white btn--lg">Request Free Quote</a>
+            <a href="../../#contact" class="btn btn--white btn--lg">Request Free Quote</a>
             <a href="tel:+19783078107" class="btn btn--outline-light btn--lg">Call (978) 307-8107</a>
           </div>
         </div>
@@ -221,7 +266,7 @@
         <h2 class="footer__cta-title">Get Your Free Quote Today!</h2>
         <p class="footer__cta-text">Professional cleaning services with 21+ years of experience. Licensed, insured, and ready to make your space shine.</p>
         <div class="footer__cta-buttons">
-          <a href="../../contact.html" class="btn btn--white btn--lg" data-track="cta-footer-quote">Request Free Quote</a>
+          <a href="../../#contact" class="btn btn--white btn--lg" data-track="cta-footer-quote">Request Free Quote</a>
           <a href="tel:+19783078107" class="btn btn--outline-light btn--lg" data-track="cta-footer-call">Call (978) 307-8107</a>
         </div>
       </div>
@@ -267,11 +312,11 @@
           <h4 class="footer__title">Quick Links</h4>
           <ul class="footer__links">
             <li><a href="../../">Home</a></li>
-            <li><a href="../../about.html">About Us</a></li>
+            <li><a href="../../#about">About Us</a></li>
             <li><a href="../">Services</a></li>
             <li><a href="../../locations/">Service Areas</a></li>
-            <li><a href="../../reviews.html">Reviews</a></li>
-            <li><a href="../../contact.html">Contact</a></li>
+            <li><a href="../../#reviews">Reviews</a></li>
+            <li><a href="../../#contact">Contact</a></li>
           </ul>
         </div>
 
