--- a/services/index.html
+++ b/services/index.html
@@ -237,19 +237,19 @@
               </ul>
             </li>
             <li class="header__menu-item">
-              <a href="../about.html" class="header__menu-link">About Us</a>
+              <a href="../#about" class="header__menu-link">About Us</a>
             </li>
             <li class="header__menu-item">
-              <a href="../reviews.html" class="header__menu-link">Reviews</a>
+              <a href="../#reviews" class="header__menu-link">Reviews</a>
             </li>
             <li class="header__menu-item">
-              <a href="../contact.html" class="header__menu-link">Contact</a>
+              <a href="../#contact" class="header__menu-link">Contact</a>
             </li>
           </ul>
         </nav>
 
         <div class="header__actions">
-          <a href="../contact.html" class="btn btn--primary btn--pulse">
+          <a href="../#contact" class="btn btn--primary btn--pulse">
             Get a Free Quote
           </a>
           <button class="header__mobile-toggle" id="mobile-toggle" aria-label="Toggle menu">
@@ -278,16 +278,16 @@
           </ul>
         </li>
         <li><a href="../locations/index.html">Service Areas</a></li>
-        <li><a href="../about.html">About Us</a></li>
-        <li><a href="../reviews.html">Reviews</a></li>
-        <li><a href="../contact.html">Contact</a></li>
+        <li><a href="../#about">About Us</a></li>
+        <li><a href="../#reviews">Reviews</a></li>
+        <li><a href="../#contact">Contact</a></li>
       </ul>
       <div class="mobile-menu__cta">
         <a href="tel:+19783078107" class="btn btn--secondary btn--block">
           <svg viewBox="0 0 24 24" fill="currentColor" width="20" height="20"><path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/></svg>
           Call (978) 307-8107
         </a>
-        <a href="../contact.html" class="btn btn--primary btn--block">Get a Free Quote</a>
+        <a href="../#contact" class="btn btn--primary btn--block">Get a Free Quote</a>
       </div>
     </div>
   </div>
@@ -571,7 +571,7 @@
             <h2 class="cta-box__title">Ready to Get Started?</h2>
             <p class="cta-box__text">Get a free, no-obligation quote for any of our cleaning services. We'll customize a plan that fits your needs and budget.</p>
             <div class="cta-box__actions">
-              <a href="../contact.html" class="btn btn--primary btn--lg btn--pulse">
+              <a href="../#contact" class="btn btn--primary btn--lg btn--pulse">
                 Get Your Free Quote
               </a>
               <a href="tel:+19783078107" class="btn btn--secondary btn--lg">
@@ -592,7 +592,7 @@
         <div class="footer__cta-content">
           <h2 class="footer__cta-title">Get Your Free Quote Today</h2>
           <p class="footer__cta-text">Professional cleaning services tailored to your needs</p>
-          <a href="../contact.html" class="btn btn--primary btn--lg btn--pulse">Request a Quote</a>
+          <a href="../#contact" class="btn btn--primary btn--lg btn--pulse">Request a Quote</a>
         </div>
       </div>
     </div>
@@ -635,11 +635,11 @@
             <h3 class="footer__title">Quick Links</h3>
             <ul class="footer__list">
               <li><a href="../index.html">Home</a></li>
-              <li><a href="../about.html">About Us</a></li>
+              <li><a href="../#about">About Us</a></li>
               <li><a href="index.html">Our Services</a></li>
               <li><a href="../locations/index.html">Service Areas</a></li>
-              <li><a href="../reviews.html">Reviews</a></li>
-              <li><a href="../contact.html">Contact Us</a></li>
+              <li><a href="../#reviews">Reviews</a></li>
+              <li><a href="../#contact">Contact Us</a></li>
             </ul>
           </div>
 
