--- a/sitemap.html
+++ b/sitemap.html
@@ -181,18 +181,18 @@
             </div>
           </li>
           <li class="nav-item">
-            <a href="about.html" class="nav-link">About Us</a>
+            <a href="#about" class="nav-link">About Us</a>
           </li>
           <li class="nav-item">
-            <a href="reviews.html" class="nav-link">Reviews</a>
+            <a href="#reviews" class="nav-link">Reviews</a>
           </li>
           <li class="nav-item">
-            <a href="contact.html" class="nav-link">Contact</a>
+            <a href="#contact" class="nav-link">Contact</a>
           </li>
         </ul>
       </nav>
 
-      <a href="contact.html" class="btn btn--primary header__cta hide-mobile" data-track="cta-header">Get Free Quote</a>
+      <a href="#contact" class="btn btn--primary header__cta hide-mobile" data-track="cta-header">Get Free Quote</a>
 
       <button class="header__toggle" aria-label="Toggle navigation menu" aria-expanded="false">
         <span class="header__toggle-icon">
@@ -299,7 +299,7 @@
           <h2 class="cta-box__title">Ready for a Cleaner Space?</h2>
           <p class="cta-box__text">Get your free, no-obligation quote today and discover why Massachusetts trusts Dorys Janitorial for all their cleaning needs.</p>
           <div class="cta-box__actions">
-            <a href="contact.html" class="btn btn--white btn--lg" data-track="cta-final-quote">Get Your Free Quote</a>
+            <a href="#contact" class="btn btn--white btn--lg" data-track="cta-final-quote">Get Your Free Quote</a>
             <a href="tel:+19783078107" class="btn btn--outline-light btn--lg" data-track="cta-final-call">
               <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"/></svg>
               Call (978) 307-8107
@@ -318,7 +318,7 @@
         <h2 class="footer__cta-title">Get Your Free Quote Today!</h2>
         <p class="footer__cta-text">Professional cleaning services with 21+ years of experience. Licensed, insured, and ready to make your space shine.</p>
         <div class="footer__cta-buttons">
-          <a href="contact.html" class="btn btn--white btn--lg" data-track="cta-footer-quote">Request Free Quote</a>
+          <a href="#contact" class="btn btn--white btn--lg" data-track="cta-footer-quote">Request Free Quote</a>
           <a href="tel:+19783078107" class="btn btn--outline-light btn--lg" data-track="cta-footer-call">Call (978) 307-8107</a>
         </div>
       </div>
@@ -328,6 +328,7 @@
         <!-- Brand Column -->
         <div class="footer__col footer__brand">
           <a href="/" class="footer__logo">
+            <img src="assets/images/logo/logo-original.jpg" alt="Dorys Janitorial Cleaning Services" class="footer__logo-img" width="180" height="60">
             <span class="footer__logo-text">Dorys Janitorial</span>
           </a>
           <p class="footer__description">Professional janitorial and cleaning services in Massachusetts since 2004. We deliver exceptional results with attention to detail and clear communication.</p>
@@ -364,11 +365,11 @@
           <h4 class="footer__title">Quick Links</h4>
           <ul class="footer__links">
             <li><a href="/">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
+            <li><a href="#about">About Us</a></li>
             <li><a href="services/">Services</a></li>
             <li><a href="locations/">Service Areas</a></li>
-            <li><a href="reviews.html">Reviews</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="#reviews">Reviews</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
 
