--- a/about.html
+++ b/about.html
@@ -143,18 +143,18 @@
             </div>
           </li>
           <li class="nav-item">
-            <a href="about.html" class="nav-link nav-link--active">About Us</a>
+            <a href="#about" class="nav-link nav-link--active">About Us</a>
           </li>
           <li class="nav-item">
-            <a href="reviews.html" class="nav-link">Reviews</a>
+            <a href="#reviews" class="nav-link">Reviews</a>
           </li>
           <li class="nav-item">
-            <a href="contact.html" class="nav-link">Contact</a>
+            <a href="#contact" class="nav-link">Contact</a>
           </li>
         </ul>
       </nav>
 
-      <a href="contact.html" class="btn btn--primary header__cta hide-mobile" data-track="cta-header">Get Free Quote</a>
+      <a href="#contact" class="btn btn--primary header__cta hide-mobile" data-track="cta-header">Get Free Quote</a>
 
       <button class="header__toggle" aria-label="Toggle navigation menu" aria-expanded="false">
         <span class="header__toggle-icon">
@@ -319,7 +319,7 @@
         <h2 class="text-white mb-lg">Ready to Experience the Dorys Difference?</h2>
         <p class="lead text-white mb-xl" style="opacity: 0.9;">Get a free quote and see why Massachusetts trusts us for their cleaning needs.</p>
         <div class="btn-group btn-group--center">
-          <a href="contact.html" class="btn btn--white btn--lg">Get Free Quote</a>
+          <a href="#contact" class="btn btn--white btn--lg">Get Free Quote</a>
           <a href="tel:+19783078107" class="btn btn--outline-light btn--lg">Call (978) 307-8107</a>
         </div>
       </div>
@@ -334,7 +334,7 @@
         <h2 class="footer__cta-title">Get Your Free Quote Today!</h2>
         <p class="footer__cta-text">Professional cleaning services with 21+ years of experience. Licensed, insured, and ready to make your space shine.</p>
         <div class="footer__cta-buttons">
-          <a href="contact.html" class="btn btn--white btn--lg" data-track="cta-footer-quote">Request Free Quote</a>
+          <a href="#contact" class="btn btn--white btn--lg" data-track="cta-footer-quote">Request Free Quote</a>
           <a href="tel:+19783078107" class="btn btn--outline-light btn--lg" data-track="cta-footer-call">Call (978) 307-8107</a>
         </div>
       </div>
@@ -344,6 +344,7 @@
         <!-- Brand Column -->
         <div class="footer__col footer__brand">
           <a href="/" class="footer__logo">
+            <img src="assets/images/logo/logo-original.jpg" alt="Dorys Janitorial Cleaning Services" class="footer__logo-img" width="180" height="60">
             <span class="footer__logo-text">Dorys Janitorial</span>
           </a>
           <p class="footer__description">Professional janitorial and cleaning services in Massachusetts since 2004. We deliver exceptional results with attention to detail and clear communication.</p>
@@ -380,11 +381,11 @@
           <h4 class="footer__title">Quick Links</h4>
           <ul class="footer__links">
             <li><a href="/">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
+            <li><a href="#about">About Us</a></li>
             <li><a href="services/">Services</a></li>
             <li><a href="locations/">Service Areas</a></li>
-            <li><a href="reviews.html">Reviews</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="#reviews">Reviews</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
 
